feat: add CML06 consumer subscriptions
